--- a/src/pages/meals.astro
+++ b/src/pages/meals.astro
@@ -356,7 +356,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="more-dishes">
                 <h3>More Dishes</h3>
                 <div class="menu-item">
-                    <span>Fish</span> <span>KSh 500</span>
+                    <span>Fish(Boil, Wet/Dry Fry)</span> <span>KSh 500</span>
                     <button class="order-btn" data-item="Fish" data-prices='{"Default": 500}'>Order</button>
                 </div>
                 <div class="menu-item">
@@ -368,16 +368,12 @@ import Layout from "../layouts/Layout.astro";
                     <button class="order-btn" data-item="Aliya" data-prices='{"Default": 500}'>Order</button>
                 </div>
                 <div class="menu-item">
-                    <span>Aruda</span> <span>KSh 500</span>
-                    <button class="order-btn" data-item="Aruda" data-prices='{"Default": 500}'>Order</button>
+                    <span>Kienyeji Veges</span> <span>KSh 150</span>
+                    <button class="order-btn" data-item="Kienyeji" data-prices='{"Default": 500}'>Order</button>
                 </div>
                 <div class="menu-item">
-                    <span>Dek</span> <span>KSh 500</span>
+                    <span>Kales</span> <span>KSh 100</span>
                     <button class="order-btn" data-item="Dek" data-prices='{"Default": 500}'>Order</button>
-                </div>
-                <div class="menu-item">
-                    <span>Omena</span> <span>KSh 500</span>
-                    <button class="order-btn" data-item="Omena" data-prices='{"Default": 500}'>Order</button>
                 </div>
             </div>
             <div class="accompaniments">
@@ -399,17 +395,13 @@ import Layout from "../layouts/Layout.astro";
                     <button class="order-btn" data-item="Chapati" data-prices='{"Default": 100}'>Order</button>
                 </div>
                 <div class="menu-item">
-                    <span>Fries/Chips</span> <span>KSh 100</span>
-                    <button class="order-btn" data-item="Fries/Chips" data-prices='{"Default": 100}'>Order</button>
+                    <span>Fries/Chips</span> <span>KSh 200</span>
+                    <button class="order-btn" data-item="Fries/Chips" data-prices='{"Default": 200}'>Order</button>
                 </div>
                 <div class="menu-item">
                     <span>Matoke</span> <span>KSh 100</span>
                     <button class="order-btn" data-item="Matoke" data-prices='{"Default": 100}'>Order</button>
-                </div>
-                <div class="menu-item">
-                    <span>Veges(Kales/Kienyeji)</span> <span>KSh 150</span>
-                    <button class="order-btn" data-item="Vegetables" data-prices='{"Default": 150}'>Order</button>
-                </div>
+                </div>   
             </div>
         </div>
     </section>
