--- a/src/pages/breakfast.astro
+++ b/src/pages/breakfast.astro
@@ -214,6 +214,12 @@ import Layout from "../layouts/Layout.astro";
         <img src="/full-breakfast.jpg" alt="Full Breakfast" loading="lazy">
         <div class="full-breakfast-details">
             <span>Full Breakfast - KSh 1000</span>
+            <p>Consists of:</p>
+            <p>A hot beverage of your choice</p>
+            <p>2 Starch(Mandazi/Nduma/sweet potatoes/chapati)</p>
+            <p>2 Proteins(sausage/chicken wings/gizzard/eggs)</p>
+            <p> Cereals (weetabix/corn flour)</p>
+            <p>Assorted Fruits</p>
             <button class="order-btn" data-item="Full Breakfast" data-prices='{"Default": 1000}'>Order</button>
         </div>
     </div>
@@ -230,6 +236,10 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="English Tea" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
+            <span>Coffee</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Coffee" data-prices='{"Default": 200}'>Order</button>
+        </div>
+        <div class="menu-item">
             <span>Black Tea</span> <span>KSh 100</span>
             <button class="order-btn" data-item="Black Tea" data-prices='{"Default": 100}'>Order</button>
         </div>
@@ -238,7 +248,7 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Coffee" data-prices='{"Default": 100}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Plain Milk</span> <span>KSh 150</span>
+            <span>Milk</span> <span>KSh 200</span>
             <button class="order-btn" data-item="Plain Milk" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
@@ -246,27 +256,27 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Tea Masala" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Fruits</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Fruits" data-prices='{"Default": 150}'>Order</button>
+            <span>Fruits</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Fruits" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
             <span>Fresh Juice</span> <span>KSh 150</span>
             <button class="order-btn" data-item="Fresh Juice" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Ice Cream</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 200}'>Order</button>
+            <span>Ice Cream</span> <span>KSh 250</span>
+            <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Strawberry Milkshake</span> <span>KSh 150</span>
+            <span>Strawberry Milkshake</span> <span>KSh 250</span>
             <button class="order-btn" data-item="Strawberry Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Mango Milkshake</span> <span>KSh 150</span>
+            <span>Mango Milkshake</span> <span>KSh 250</span>
             <button class="order-btn" data-item="Mango Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Vanilla Milkshake</span> <span>KSh 150</span>
+            <span>Vanilla Milkshake</span> <span>KSh 250</span>
             <button class="order-btn" data-item="Vanilla Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
@@ -303,8 +313,8 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Sausage" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Fried Eggs</span> <span>KSh 100</span>
-            <button class="order-btn" data-item="Fried Eggs" data-prices='{"Default": 100}'>Order</button>
+            <span>Fried Eggs</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Fried Eggs" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
             <span>SFrench Fries</span> <span>KSh 200</span>
@@ -317,6 +327,14 @@ import Layout from "../layouts/Layout.astro";
         <div class="menu-item">
             <span>Smokies</span> <span>KSh 50</span>
             <button class="order-btn" data-item="Smokies" data-prices='{"Default": 50}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Nduma</span> <span>KSh 100</span>
+            <button class="order-btn" data-item="Nduma" data-prices='{"Default": 100}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Sweet Potatoes</span> <span>KSh 100</span>
+            <button class="order-btn" data-item="Sweet Potatoes" data-prices='{"Default": 100}'>Order</button>
         </div>
     </div>
     <div class="image-row">
