--- a/src/pages/meals.astro
+++ b/src/pages/meals.astro
@@ -327,19 +327,19 @@ import Layout from "../layouts/Layout.astro";
             <div class="main-dish">
                 <img src="/chicken.jpg" alt="Chicken" loading="lazy">
                 <span>Chicken(Stew, Wet,Dry Fry)</span>
-                <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
+                <div class="price-overlay">1/4KG - KSh 450<br>1/2KG - KSh 900<br>1KG - KSh 1800</div>
                 <button class="order-btn" data-item="Chicken" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
                 <img src="/beef.jpg" alt="Beef" loading="lazy">
                 <span>Beef(Stew, Dry, Wet Fry)</span>
-                <div class="price-overlay">1/4KG - KSh 350<br>1/2KG - KSh 700<br>1KG - KSh 1400</div>
+                <div class="price-overlay">1/4KG - KSh 300<br>1/2KG - KSh 600<br>1KG - KSh 1200</div>
                 <button class="order-btn" data-item="Beef" data-prices='{"1/4KG": 350, "1/2KG": 700, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
                 <img src="/goat.jpg" alt="Mbuzi Choma" loading="lazy">
                 <span>Mbuzi Choma</span>
-                <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
+                <div class="price-overlay">1/4KG - KSh 300<br>1/2KG - KSh 600<br>1KG - KSh 1200</div>
                 <button class="order-btn" data-item="Mbuzi Choma" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
@@ -372,6 +372,10 @@ import Layout from "../layouts/Layout.astro";
                     <button class="order-btn" data-item="Kienyeji" data-prices='{"Default": 500}'>Order</button>
                 </div>
                 <div class="menu-item">
+                    <span>Fried Eggs</span> <span>KSh 150</span>
+                    <button class="order-btn" data-item="Fried Eggs" data-prices='{"Default": 150}'>Order</button>
+                </div>
+                <div class="menu-item">
                     <span>Kales</span> <span>KSh 100</span>
                     <button class="order-btn" data-item="Dek" data-prices='{"Default": 500}'>Order</button>
                 </div>
@@ -379,15 +383,15 @@ import Layout from "../layouts/Layout.astro";
             <div class="accompaniments">
                 <h3>Accompaniments</h3>
                 <div class="menu-item">
-                    <span>Ugali (White)</span> <span>KSh 100</span>
-                    <button class="order-btn" data-item="Ugali (White)" data-prices='{"Default": 100}'>Order</button>
+                    <span>Ugali (White)</span> <span>KSh 50</span>
+                    <button class="order-btn" data-item="Ugali (White)" data-prices='{"Default": 50}'>Order</button>
                 </div>
                 <div class="menu-item">
                     <span>Ugali (Brown)</span> <span>KSh 100</span>
                     <button class="order-btn" data-item="Ugali (Brown)" data-prices='{"Default": 100}'>Order</button>
                 </div>
                 <div class="menu-item">
-                    <span>Rice</span> <span>KSh 100</span>
+                    <span>Rice</span> <span>KSh 200</span>
                     <button class="order-btn" data-item="Rice" data-prices='{"Default": 100}'>Order</button>
                 </div>
                 <div class="menu-item">
@@ -401,7 +405,11 @@ import Layout from "../layouts/Layout.astro";
                 <div class="menu-item">
                     <span>Matoke</span> <span>KSh 100</span>
                     <button class="order-btn" data-item="Matoke" data-prices='{"Default": 100}'>Order</button>
-                </div>   
+                </div>
+                <div class="menu-item">
+                    <span>Matoke</span> <span>KSh 100</span>
+                    <button class="order-btn" data-item="Matoke" data-prices='{"Default": 100}'>Order</button>
+                </div>  
             </div>
         </div>
     </section>
