--- a/src/pages/specials.astro
+++ b/src/pages/specials.astro
@@ -259,9 +259,17 @@ import Layout from "../layouts/Layout.astro";
     <!-- Section 1: Unbeatable Specials -->
     <h2 class="section-header">Unbeatable Specials</h2>
     <div class="full-breakfast">
-        <img src="/sizzling3.jpg" alt="NEB Special Platter" loading="lazy">
+        <img src="/sizzling3.jpg" alt="NEB Special Platter for 5" loading="lazy">
         <div class="full-breakfast-details">
             <span>NEB Special Platter - KSh 3000</span>
+            <p>Contains beef, chicken, fish grilled veges, choice of ugali, chips rice, and a side of kachumbari.</p>
+            <p>Ideal for 5-8 people.</p>
+            <button class="order-btn" data-item="NEB Special Platter" data-prices='{"Default": 3000}'>Order</button>
+        </div>
+        <div class="full-breakfast">
+        <img src="/sizzling3.jpg" alt="NEB Special Platter for 3" loading="lazy">
+        <div class="full-breakfast-details">
+            <span>NEB Special Platter - KSh 2300</span>
             <p>Contains beef, chicken, fish grilled veges, choice of ugali, chips rice, and a side of kachumbari.</p>
             <p>Ideal for 5-8 people.</p>
             <button class="order-btn" data-item="NEB Special Platter" data-prices='{"Default": 3000}'>Order</button>
