--- a/src/pages/breakfast.astro
+++ b/src/pages/breakfast.astro
@@ -260,8 +260,8 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Fruits" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Fresh Juice</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Fresh Juice" data-prices='{"Default": 150}'>Order</button>
+            <span>Fresh Juice</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Fresh Juice" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
             <span>Ice Cream</span> <span>KSh 250</span>
@@ -309,15 +309,11 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Samosa" data-prices='{"Default": 50}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Sausage/Samosa</span> <span>KSh 50</span>
-            <button class="order-btn" data-item="Sausage" data-prices='{"Default": 200}'>Order</button>
-        </div>
-        <div class="menu-item">
             <span>Fried Eggs</span> <span>KSh 150</span>
             <button class="order-btn" data-item="Fried Eggs" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>SFrench Fries</span> <span>KSh 200</span>
+            <span>French Fries</span> <span>KSh 200</span>
             <button class="order-btn" data-item="French Fries" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
