--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -657,7 +657,7 @@ const { title = 'Nebraska Lounge & Grill', subtitle = 'Welcome to Our Offerings'
                 <i class="fab fa-tiktok"></i>
             </a>
         </div>
-        <p>© 2025 Club Nebraska. All Rights Reserved.</p>
+        <p>© 2025 Nebraska Lounge & Grill. All Rights Reserved.</p>
         <p>Designed By <a href="https://winkdevsolutions.com" target="_blank">WinKDev Solutions</a></p>
     </footer>
 
